[tool.poetry]
name = "repl_python3_DaringGrubbyLine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopy = "^2.1.0"
schedule = "^1.1.0"
aiohttp = "^3.7.4"
aiohttp-socks = "^0.6.0"
async-timeout = "^3.0.1"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
